# snake

./: .gitignore  Doxyfile  Makefile  README.md  install.sh  meson.build  snake.sln  snake.vcxproj  snake.vcxproj.filters
fonts/: freemono_regular_10.json  freemono_regular_10.lua
src/: food.c  food.h  game.c  game.h  main.c  snake.c  snake.h
src/util/: draw.c  draw.h  fps.c  fps.h  list.c  list.h  surface.c  surface.h  vector.h  window.c  window.h
src/util/text/: load_text.c  load_text_font.c  render_text.c  text.c  text.h  text_util.c  text_util.h
